# NEOs

./: CODE_GUIDE.md  README.md  pyproject.toml
data/: cad.sample.json  neos.sample.csv
neo_explorer/: __init__.py  __main__.py  cli.py  database.py  display.py  extract.py  facade.py  filters.py  models.py  write.py
tests/: conftest.py  test_cli.py  test_database.py  test_extract.py  test_facade.py  test_filters.py  test_models.py  test_write.py
